# dioxus-timer

./: .gitignore  Cargo.toml  Dioxus.toml  memo.md
assets/: dioxus_timer.css
src/: lib.rs  main.rs  settings.rs  timer.rs
src/settings/: components.rs  data.rs  logic.rs
src/timer/: components.rs  data.rs  logic.rs
